--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "koa-qs",
   "description": "qs for koa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "author": {
     "name": "Jonathan Ong",
     "email": "me@jongleberry.com",
@@ -32,5 +32,7 @@
   "engines": {
     "node": ">= 0.11"
   },
-  "files": ["index.js"]
+  "files": [
+    "index.js"
+  ]
 }
