--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 node_js:
+- "iojs-1"
+- "0.12"
 - "0.11"
 language: node_js
 script: "npm run test-travis"
-after_script: "npm install coveralls@2.10.0 && cat ./coverage/lcov.info | coveralls"
+after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
