--- a/package.json
+++ b/package.json
@@ -11,26 +11,28 @@
   "license": "MIT",
   "repository": "koajs/qs",
   "dependencies": {
-    "merge-descriptors": "0.0.2"
+    "merge-descriptors": "~0.0.2"
   },
   "devDependencies": {
-    "istanbul-harmony": "0",
-    "qs": "*",
+    "istanbul-harmony": "*",
     "koa": "0",
     "mocha": "1",
+    "qs": "*",
     "should": "3",
-    "supertest": "0"
+    "supertest": "0",
+    "urllib": "~2.3.0"
   },
   "peerDependencies": {
     "qs": "*"
   },
   "scripts": {
-    "test": "NODE_ENV=test mocha --harmony-generators --require should --reporter spec",
-    "test-cov": "NODE_ENV=test node --harmony-generators ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --require should",
-    "test-travis": "NODE_ENV=test node --harmony-generators ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- --require should"
+    "test": "NODE_ENV=test mocha --harmony --require should --reporter spec",
+    "test-cov": "NODE_ENV=test node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --require should",
+    "test-travis": "NODE_ENV=test node --harmony ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha --report lcovonly -- --require should"
   },
   "engines": {
-    "node": ">= 0.11"
+    "node": ">= 0.11",
+    "iojs": ">= 1.0.0"
   },
   "files": [
     "index.js"
