Update dependencies qs and merge-descriptors

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "MIT",
   "repository": "koajs/qs",
   "dependencies": {
-    "merge-descriptors": "~0.0.2",
-    "qs": "~2.3.3"
+    "merge-descriptors": "0.0.2",
+    "qs": "^6.5.0"
   },
   "devDependencies": {
     "istanbul-harmony": "*",
