--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-node_js:
-- "iojs-1"
-- "0.12"
-- "0.11"
+sudo: false
 language: node_js
+node_js:
+  - 7
+  - 8
 script: "npm run test-travis"
 after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
