--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-node_js:
-- "iojs-1"
-- "0.12"
-- "0.11"
 language: node_js
-script: "npm run test-travis"
-after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
+node_js:
+  - 7
+  - 8
+  - 9
+  - 10
+script:
+  - npm run test-travis
+after_script:
+  - npm install coveralls@2
+  - cat ./coverage/lcov.info | coveralls
