--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,8 @@
 node_js:
-- "iojs-1"
-- "0.12"
-- "0.11"
+- 6
+- 8
+- 10
+- node
 language: node_js
 script: "npm run test-travis"
 after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
