--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,25 @@
+#       OS        #
+###################
+.DS_Store
+.idea
+Thumbs.db
+tmp/
+temp/
+
+
+#     Node.js     #
+###################
 node_modules
+package-lock.json
+yarn.lock
+npm-debug.log
+yarn-debug.log
+yarn-error.log
+dist
+
+
+#       NYC       #
+###################
 coverage
+*.lcov
+.nyc_output
