--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: node_js
 node_js:
-  - 7
   - 8
-  - 9
   - 10
+  - 12
+  - stable
 script:
-  - npm run test-travis
+  - npm run ci
 after_script:
   - npm install coveralls@2
   - cat ./coverage/lcov.info | coveralls
